objects/Harvest__c.object
<CustomObject>
    <label>Harvest</label>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>Harvest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Harvests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Yield__c</fullName>
        <label>Yield</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crop_Picture__c</fullName>
        <formula>if(ISBLANK(Harvest_Field__r.Picture_URL__c), &apos;&apos;, IMAGE(Harvest_Field__r.Picture_URL__c, &quot;Picture&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Crop Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harvest_Date__c</fullName>
        <label>Harvest Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Harvest_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Harvest Field</label>
        <referenceTo>Harvest_Field__c</referenceTo>
        <relationshipLabel>Harvests</relationshipLabel>
        <relationshipName>Harvests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Moisture_Level__c</fullName>
        <label>Moisture Level</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predicted_Yield__c</fullName>
        <label>Predicted Yield</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Harvests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Temperature__c</fullName>
        <label>Average Temperature</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>